--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,12 +30,13 @@
             android:label="@string/title_activity_login">
         </activity>
         <activity android:name=".Register">
-
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".userHome" />
+        <activity android:name=".mcdHome"></activity>
     </application>
 
 </manifest>
