--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,11 @@
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"
-            android:label="@string/title_activity_login"/>
+                android:label="@string/title_activity_login"
+                android:value=".MainActivity" />
         </activity>
-        <activity android:name=".Register"
+        <activity
+            android:name=".Register"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -37,12 +38,14 @@
         </activity>
         <activity android:name=".userHome" />
         <activity android:name=".mcdHome" />
-        <activity android:name=".PassLayout"
-            android:parentActivityName = ".Register">
+        <activity
+            android:name=".PassLayout"
+            android:parentActivityName=".Register">
             <meta-data
-                android:name ="android.support.PARENT_ACTIVITY"
+                android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Register" />
         </activity>
+        <activity android:name=".Problem_Submission"></activity>
     </application>
 
 </manifest>
