--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,26 +26,17 @@
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:label="@string/title_activity_login"
                 android:value=".MainActivity" />
+            android:label="@string/title_activity_login">
         </activity>
-        <activity
-            android:name=".Register"
+        <activity android:name=".Register">
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".userHome" />
-        <activity android:name=".mcdHome" />
-        <activity
-            android:name=".PassLayout"
-            android:parentActivityName=".Register">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Register" />
-        </activity>
-        <activity android:name=".Problem_Submission"></activity>
+        <activity android:name=".mcdHome"></activity>
     </application>
 
 </manifest>
