--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,9 +36,12 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".userHome" />
-        <activity android:name=".PassLayout"/>
-        <activity android:name=".Problem_Submission"/>
-        <activity android:name=".mcdHome"></activity>
+        <activity android:name=".PassLayout" />
+        <activity android:name=".Problem_Submission" />
+        <activity android:name=".mcdHome" />
+        <activity
+            android:name=".compose_MCD"
+            android:label="@string/title_activity_compose__mcd"></activity>
     </application>
 
 </manifest>
