--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <activity android:name=".mcdHome" />
         <activity
             android:name=".compose_MCD"
-            android:label="@string/title_activity_compose__mcd"></activity>
+            android:label="@string/title_activity_compose__mcd" />
+        <activity android:name=".setting"></activity>
     </application>
 
 </manifest>
